Add homework from 17.06.2025