@@ -1,19 +1,18 @@
 package de.telran.shop210125mbe.controller.advice;
 
+import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RestControllerAdvice
@@ -28,26 +27,30 @@ public class AdviceController {
     @ResponseStatus(HttpStatus.I_AM_A_TEAPOT)
     @ExceptionHandler(Exception.class)
     public String handlerException(Exception exception) {
-        return "Sorry, an error has occurred : " + exception.getMessage() + " Please try again later.";
+        return "Sorry, an error has occurred : " + exception.getMessage();
     }
 
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(ConstraintViolationException.class)
-    public String handleNoSuchElementException(ConstraintViolationException exception){
-        return "Invalid data in controller layer: " + exception.getMessage();
+    public ResponseEntity<?> handleConstraintViolationException(ConstraintViolationException exception) {
+        Map<String, ?> errors = exception.getConstraintViolations().stream()
+                .collect(Collectors.toMap(violation -> violation.getPropertyPath().toString(), ConstraintViolation::getMessage));
+        //Collectors.mapping(ConstraintViolation::getMessage, Collectors.toList())));
+
+        //return "Invalid data in controller layer: " + errors;
+        return new ResponseEntity<>(errors, new HttpHeaders(), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<?> handLeValidationErrors (MethodArgumentNotValidException exception){
-        List<String> errors = exception.getBindingResult().getFieldErrors().stream()
-                .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .toList();
-        return new ResponseEntity<>(getErrorsMap(errors), new HttpHeaders(), HttpStatus.BAD_REQUEST);
+    public ResponseEntity<?> handleMethodArgumentNotValidException(MethodArgumentNotValidException exception) {
+        Map<String, ?> errors = exception.getBindingResult().getFieldErrors().stream()
+                .collect(Collectors.toMap(FieldError::getField, fieldError -> fieldError.getDefaultMessage() != null ? fieldError.getDefaultMessage() : "Invalid data"));
+                        //FieldError::getDefaultMessage)
+                        //Collectors.mapping(FieldError::getDefaultMessage, Collectors.toList()));
+        return new ResponseEntity<>(errors, new HttpHeaders(), HttpStatus.BAD_REQUEST);
     }
-
-    private Map<String, List<String>> getErrorsMap(List<String> errors) {
-        Map<String, List<String>> errorsResponse = new HashMap<>();
-        errorsResponse.put("Errors in Dto check", errors);
-        return errorsResponse;
-    }
+//    private Map<String, List<String>> getErrorsMap(List<String> errors) {
+//        Map<String, List<String>> errorsResponse = new HashMap<>();
+//        errorsResponse.put("Errors in Dto check", errors);
+//        return errorsResponse;
+//    }
 }
